ExamPackage/main/default/objects/Exam_Result__c/Exam_Result__c.object-meta.xml
<CustomObject>
    <label>Exam Result</label>
    <nameField>
        <displayFormat>ExamResult-{0000}</displayFormat>
        <label>Exam Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exam Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>