ExamPackage/main/default/objects/Exam_Result__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Exam Results</relationshipLabel>
    <relationshipName>Exam_Results</relationshipName>
    <type>Lookup</type>
</CustomField>