ExamPackage/main/default/objects/Exam_Result__c/fields/Exam__c.field-meta.xml
<CustomField>
    <fullName>Exam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exam</label>
    <referenceTo>Exam__c</referenceTo>
    <relationshipLabel>Exam Results</relationshipLabel>
    <relationshipName>Exam_Results</relationshipName>
    <type>Lookup</type>
</CustomField>