ExamPackage/main/default/objects/Exam_Result__c/fields/Graded__c.field-meta.xml
<CustomField>
    <fullName>Graded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Graded</label>
    <type>Checkbox</type>
</CustomField>