ExamPackage/main/default/objects/Exam_Result__c/fields/Pass__c.field-meta.xml
<CustomField>
    <fullName>Pass__c</fullName>
    <formula>IF( ISBLANK( Passing_Grade_Override__c ), ( Total_Correct__c / Total_Answers__c ) &gt;=  Exam__r.Default_Passing_Grade__c, ( Total_Correct__c / Total_Answers__c ) &gt;=  Passing_Grade_Override__c )</formula>
    <label>Pass</label>
    <type>Checkbox</type>
</CustomField>