ExamPackage/main/default/objects/Exam_Result__c/fields/Passing_Grade_Override__c.field-meta.xml
<CustomField>
    <fullName>Passing_Grade_Override__c</fullName>
    <label>Passing Grade Override</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>