ExamPackage/main/default/objects/Exam_Result__c/fields/Show_Answer_Explanations__c.field-meta.xml
<CustomField>
    <fullName>Show_Answer_Explanations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Answer Explanations</label>
    <type>Checkbox</type>
</CustomField>