ExamPackage/main/default/objects/Exam_Result__c/fields/Time_Limit_Override__c.field-meta.xml
<CustomField>
    <fullName>Time_Limit_Override__c</fullName>
    <label>Time Limit Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>