ExamPackage/main/default/objects/Exam_Result__c/fields/Total_Answers__c.field-meta.xml
<CustomField>
    <fullName>Total_Answers__c</fullName>
    <label>Total Answers</label>
    <summaryForeignKey>Hero_Answer__c.Exam_Result__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>